<?xml version="1.0"?>
<package format="2">
  <name>test</name>
  <version>0.0.0</version>
  <description>The test package</description>

  <maintainer email="a@todo.todo">a</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>


  <export>
  </export>

</package>